--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@ color:#000;
 <div id="roomGrid" class="room-grid"></div>
 
 <script>
+
 let arrivals = [];
+let arrivalFromDate = null;
+let arrivalToDate   = null;
 
 const roomNumbers=[
 "001","002",
@@ -116,10 +119,7 @@ let todayCheckouts=0;
 let filter="all";
 let bookingSources=[];
 let businessDate="";
-function setFilter(f){
-    filter = f;
-    render();
-}
+
 const KEY="ROHIT_PMS_V6";
 const BACKUP_KEY = "ROHIT_PMS_V6_BACKUP";
 const SERVER_URL = "https://script.google.com/macros/s/AKfycbxsY_lyxQqE-Gq8zNRI6OqEUdLoUMuOJy33tpsmRL-rasc3cSlTFnwnNOSKZo6iOjdk/exec";
@@ -255,7 +255,9 @@ logs=d.logs||[];
 bookingSources=d.bookingSources||["Walk-in"];
 businessDate=d.businessDate||todayISO();
 todayCheckouts=d.todayCheckouts||0;
+
 arrivals = d.arrivals || [];
+arrivals = removeDuplicateArrivals(arrivals);
 
 render();
 
@@ -627,34 +629,148 @@ function renderArrivalList(){
 let box = document.getElementById("arrivalList");
 if(!box) return;
 
-box.innerHTML="";
+box.innerHTML = "";
 
-let list = arrivals.filter(a => a.status==="Pending");
+/* ---- Pending list ---- */
+let pending = arrivals.filter(a => {
 
-if(list.length===0){
-box.innerHTML="<div class='small'>No arrivals</div>";
-return;
+if(a.status!=="Pending") return false;
+
+/* default : only business date */
+if(!arrivalFromDate || !arrivalToDate){
+return a.arrivalDate === businessDate;
 }
 
-list.forEach((a,i)=>{
+/* range mode */
+return a.arrivalDate >= arrivalFromDate &&
+       a.arrivalDate <= arrivalToDate;
+
+});
+
+
+/* ---- Arrived / CheckedIn list ---- */
+let arrived = arrivals.filter(a => {
+
+if(a.status!=="CheckedIn") return false;
+
+/* default : only business date */
+if(!arrivalFromDate || !arrivalToDate){
+return a.arrivalDate === businessDate;
+}
+
+/* range mode */
+return a.arrivalDate >= arrivalFromDate &&
+       a.arrivalDate <= arrivalToDate;
+
+});
+
+
+/* ---------- Pending Section ---------- */
+
+let h1 = document.createElement("h4");
+h1.innerText = "Pending Arrivals ("+pending.length+")";
+box.appendChild(h1);
+
+if(pending.length===0){
+let d=document.createElement("div");
+d.className="small";
+d.innerText="No pending arrivals";
+box.appendChild(d);
+}
+
+pending.forEach((a,i)=>{
+
+let isToday = (a.arrivalDate === businessDate);
 
 let d=document.createElement("div");
 d.style.border="1px solid #ddd";
 d.style.padding="6px";
 d.style.marginBottom="6px";
+d.style.background = isToday ? "#fff" : "#ffecec";
 
-d.innerHTML=`
+d.innerHTML = `
 <b>${a.guest}</b><br>
 Arrival: ${a.arrivalDate}<br>
 Room: ${a.room || "-"}<br>
-₹${a.rate} | ${a.plan}<br>
-${a.source}<br>
-<button onclick="checkInFromArrival(${i})">Check In</button>
+₹${a.rate || ""} | ${a.plan || ""}<br>
+${a.source || ""}<br>
+${isToday
+? `<button onclick="checkInFromArrivalPending(${i})">Check In</button>`
+: `<div style="color:red;font-size:11px">Not for business date</div>`
+}
 `;
 
 box.appendChild(d);
 });
 
+
+/* ---------- Arrived Section ---------- */
+
+let h2 = document.createElement("h4");
+h2.style.marginTop="10px";
+h2.innerText = "Arrived / Checked-In ("+arrived.length+")";
+box.appendChild(h2);
+
+if(arrived.length===0){
+let d=document.createElement("div");
+d.className="small";
+d.innerText="No arrived guests";
+box.appendChild(d);
+}
+
+arrived.forEach(a=>{
+
+let d=document.createElement("div");
+d.style.border="1px solid #ddd";
+d.style.padding="6px";
+d.style.marginBottom="6px";
+d.style.background="#f4f6f8";
+
+d.innerHTML = `
+<b>${a.guest}</b><br>
+Arrival: ${a.arrivalDate}<br>
+Room: ${a.room || "-"}<br>
+₹${a.rate || ""} | ${a.plan || ""}<br>
+${a.source || ""}
+`;
+
+box.appendChild(d);
+});
+
+}
+function removeDuplicateArrivals(list){
+
+let seen = {};
+let clean = [];
+
+list.forEach(a => {
+
+let key;
+
+/* main key = Res No if available */
+if(a.resNo && a.resNo.trim() !== ""){
+key = "RES|" + a.resNo.trim();
+}
+else{
+/* fallback (old logic) */
+key =
+(a.guest || "").trim() + "|" +
+(a.arrivalDate || "") + "|" +
+(a.rate || "") + "|" +
+(a.plan || "") + "|" +
+(a.source || "") + "|" +
+(a.room || "") + "|" +
+(a.status || "");
+}
+
+if(!seen[key]){
+seen[key] = true;
+clean.push(a);
+}
+
+});
+
+return clean;
 }
 
 
@@ -716,6 +832,126 @@ save();
 render();
 renderArrivalList();
 }
+function applyArrivalRange(){
+
+let f = document.getElementById("arrFrom").value;
+let t = document.getElementById("arrTo").value;
+
+if(!f || !t){
+alert("Select both From and To date");
+return;
+}
+
+arrivalFromDate = f;
+arrivalToDate   = t;
+
+renderArrivalList();
+}
+
+function resetArrivalRange(){
+
+arrivalFromDate = null;
+arrivalToDate   = null;
+
+document.getElementById("arrFrom").value = "";
+document.getElementById("arrTo").value   = "";
+
+renderArrivalList();
+}
+
+function checkInFromArrivalPending(index){
+
+let pending = arrivals.filter(a => {
+
+if(a.status!=="Pending") return false;
+
+/* default : only business date */
+if(!arrivalFromDate || !arrivalToDate){
+return a.arrivalDate === businessDate;
+}
+
+/* range mode */
+return a.arrivalDate >= arrivalFromDate &&
+       a.arrivalDate <= arrivalToDate;
+
+});
+
+let a = pending[index];
+
+if(!a){
+alert("Arrival not found");
+return;
+}
+
+/* ---- BUSINESS DATE VALIDATION ---- */
+if(a.arrivalDate !== businessDate){
+alert("This arrival is for "+a.arrivalDate+
+      ".\nBusiness date is "+businessDate+
+      ".\nCheck-in not allowed.");
+return;
+}
+
+let roomNo = a.room;
+
+if(!roomNo){
+roomNo = prompt("Assign room number");
+}
+
+let r = rooms.find(x=>x.roomNo===roomNo);
+
+if(!r){
+alert("Room not found");
+return;
+}
+
+if(r.status!=="Vacant"){
+alert("Room not vacant");
+return;
+}
+
+/* ---- check in ---- */
+
+r.guest = a.guest;
+r.rate  = a.rate;
+r.plan  = a.plan;
+r.source= a.source;
+
+r.status="Occupied";
+r.checkInAt=now();
+r.dayUse=false;
+r.nightStay=true;
+r.stayOn=false;
+r.folio=0;
+
+logs.push({
+bizDate:businessDate,
+time:new Date().toLocaleTimeString(),
+room:roomNo,
+action:"Check In (Arrival List)",
+guest:r.guest,
+rate:r.rate,
+plan:r.plan,
+source:r.source,
+amount:""
+});
+
+/* mark only that arrival as checked in */
+let realObj = arrivals.find(x =>
+x.guest===a.guest &&
+x.arrivalDate===a.arrivalDate &&
+x.room===a.room &&
+x.status==="Pending"
+);
+
+if(realObj){
+realObj.status="CheckedIn";
+}
+
+save();
+render();
+renderArrivalList();
+
+}
 
 
 function importArrivalCSV(input){
@@ -769,6 +1005,7 @@ h.toLowerCase() === name.toLowerCase()
 }
 
 let cGuest   = col("Guest");
+let cResNo   = col("Res. No.");
 let cRoom    = col("Room");
 let cRate    = col("Rate(Rs)");
 let cArrival = col("Arrival");
@@ -801,16 +1038,34 @@ let ad = parseEzeeDate(arrRaw);
 let roomClean = cleanRoom(row[cRoom]);
 
 /* duplicate check (guest + date + room) */
-let exists = arrivals.some(x =>
-   x.guest === guest &&
-   x.arrivalDate === ad &&
-   x.room === roomClean &&
-   x.status === "Pending"
-);
+let resNo = cResNo >= 0 ? row[cResNo].trim() : "";
+
+let exists;
+
+if(resNo){
+    // primary key = Res No
+    exists = arrivals.some(x =>
+        x.resNo === resNo
+    );
+}
+else{
+    // fallback key when Res No missing
+    exists = arrivals.some(x =>
+        x.guest === guest &&
+        x.arrivalDate === ad &&
+        x.rate === cleanNumber(row[cRate]) &&
+        (x.plan || "") === (row[cPlan] || "") &&
+        (x.source || "") === (row[cSource] || "") &&
+        (x.room || "") === roomClean &&
+        x.status === "Pending"
+    );
+}
+
 
 if(exists) continue;
 
 arrivals.push({
+resNo   : cResNo >= 0 ? row[cResNo].trim() : "",
 guest   : guest,
 arrivalDate : ad,
 room    : roomClean,
@@ -819,6 +1074,7 @@ plan    : row[cPlan] || "",
 source  : row[cSource] || "",
 status  : "Pending"
 });
+
 
 
 added++;
@@ -872,6 +1128,13 @@ return;
 }
 
 w.style.display = "block";
+
+document.getElementById("arrFrom").value = businessDate;
+document.getElementById("arrTo").value   = businessDate;
+
+arrivalFromDate = null;
+arrivalToDate   = null;
+
 
 if(typeof renderArrivalList === "function"){
 renderArrivalList();
@@ -1090,6 +1353,16 @@ z-index:9999">
 <button onclick="document.getElementById('arrivalFile').click()">
 Upload eZee Arrival CSV
 </button>
+
+<div style="margin:6px 0;font-size:12px">
+From :
+<input type="date" id="arrFrom">
+To :
+<input type="date" id="arrTo">
+<button onclick="applyArrivalRange()">Go</button>
+<button onclick="resetArrivalRange()">Today</button>
+</div>
+
 <div id="arrivalList"></div>
 </div>
 
